Fix z-index bug

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body{
     background: url("img/bgimg/dotted.jpg") no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    /* z-index: 99; */
 }
 
 .out {
@@ -130,7 +131,7 @@ i{
 .icon{
     margin: 0.3rem;
     width: 110px;
-    z-index: -1;
+    z-index:99;
 }
 .icon img{
     padding:0rem;
